syntax = "proto3";

package TaskoMask.BuildingBlocks.Contracts.Protos;

import "base.proto";

service GetOrganizationsByOwnerIdGrpcService {
  rpc Handle (GetOrganizationsByOwnerIdGrpcRequest) returns (stream GetOrganizationsByOwnerIdGrpcResponse);
}

message GetOrganizationsByOwnerIdGrpcRequest {
  string OwnerId = 1;
}

message GetOrganizationsByOwnerIdGrpcResponse {

	CreationTime CreationTime=1;
	string id = 2;
	string name = 3;
	string description = 4;
	string ownerId = 5;
}
